@@ -2,6 +2,11 @@
 
 remctl 3.18 (unreleased)
 
+    Add support for PCRE2 for pcre ACLs and use it by preference over
+    PCRE1 if it is found.  UTF-8 regular expressions are not enabled by
+    default, but can be enabled by adding (*UTF) to the beginning of the
+    regular expression.
+
     The Perl libraries and the remctl test suite now require Perl 5.10 or
     later.
 
